--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,9 @@
 {
   "name": "react-redux-boilerplate",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/melyourhero/react-redux-boilerplate"
+  },
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -19,13 +23,13 @@
   ],
   "betterScripts": {
     "build": {
-      "command": "webpack --config=webpack/webpack.prod.config",
+      "command": "webpack --config webpack/webpack.prod.config",
       "env": {
         "NODE_ENV": "production"
       }
     },
     "start": {
-      "command": "webpack-dev-server --hot --config=webpack/webpack.dev.config",
+      "command": "webpack-dev-server --open --hot --config webpack/webpack.dev.config",
       "env": {
         "NODE_ENV": "development"
       }
@@ -40,22 +44,19 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@hot-loader/react-dom": "^16.8.2",
+    "@hot-loader/react-dom": "^16.8.3",
     "@types/classnames": "^2.2.7",
     "@types/lodash": "^4.14.121",
-    "@types/node": "^11.9.4",
-    "@types/react": "^16.8.3",
+    "@types/node": "^11.9.5",
+    "@types/react": "^16.8.5",
     "@types/react-dom": "^16.8.2",
     "@types/react-redux": "^7.0.1",
     "@types/react-router": "^4.4.4",
     "@types/react-router-dom": "^4.3.1",
     "@types/redux-actions": "^2.3.2",
     "@types/uuid": "^3.4.4",
-    "@types/webpack": "^4.4.24",
+    "@types/webpack": "^4.4.25",
     "@types/webpack-env": "^1.13.7",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.5",
-    "babel-polyfill": "^6.26.0",
     "better-npm-run": "^0.1.1",
     "bootstrap": "^4.3.1",
     "circular-dependency-plugin": "^5.0.2",
@@ -71,56 +72,51 @@
     "is_js": "^0.9.0",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.11",
+    "memoizee": "^0.4.14",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "node-sass-json-importer": "^4.1.0",
     "normalize.css": "^8.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-hot-loader": "^4.7.0",
-    "react-redux": "^6.0.0",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-hot-loader": "^4.7.1",
+    "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.0.1",
+    "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.23.1",
     "tslib": "^1.9.3",
-    "tslint": "^5.12.1",
+    "tslint": "^5.13.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-loader": "^3.5.4",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.3.3",
+    "type-zoo": "^3.3.0",
+    "typescript": "^3.3.3333",
     "url-loader": "^1.0.1",
     "utility-types": "^3.4.1",
     "uuid": "^3.3.2",
-    "webpack": "^4.29.5",
+    "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.0",
+    "webpack-dev-server": "^3.2.1",
     "webpack-env": "^0.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/plugin-proposal-class-properties": "^7.3.3",
-    "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
+    "awesome-typescript-loader": "^5.2.1",
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
     "@types/redux-batched-subscribe": "^0.1.2",
     "chai": "^4.2.0",
     "husky": "^1.3.1",
-    "memoizee": "^0.4.14",
-    "mocha": "^6.0.0",
+    "mocha": "^6.0.2",
     "mock-local-storage": "^1.1.8",
     "redux-batched-subscribe": "^0.1.6",
-    "ts-node": "^8.0.2",
-    "type-zoo": "^3.3.0"
+    "ts-node": "^8.0.2"
   }
 }
