--- a/ui/package.json
+++ b/ui/package.json
@@ -29,7 +29,7 @@
       }
     },
     "start": {
-      "command": "webpack-dev-server --open --hot --config webpack/webpack.dev.config",
+      "command": "webpack-dev-server --hot --config webpack/webpack.dev.config",
       "env": {
         "NODE_ENV": "development"
       }
@@ -57,6 +57,7 @@
     "@types/uuid": "^3.4.4",
     "@types/webpack": "^4.4.25",
     "@types/webpack-env": "^1.13.7",
+    "@babel/polyfill": "^7.4.0",
     "better-npm-run": "^0.1.1",
     "bootstrap": "^4.3.1",
     "circular-dependency-plugin": "^5.0.2",
@@ -104,19 +105,27 @@
     "uuid": "^3.3.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-env": "^0.8.0"
+    "webpack-dev-server": "^3.2.1"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^5.2.1",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
     "@types/redux-batched-subscribe": "^0.1.2",
+    "babel-loader": "^8.0.5",
+    "cache-loader": "^2.0.1",
     "chai": "^4.2.0",
+    "fork-ts-checker-webpack-plugin": "^1.0.0",
     "husky": "^1.3.1",
     "mocha": "^6.0.2",
     "mock-local-storage": "^1.1.8",
     "redux-batched-subscribe": "^0.1.6",
+    "thread-loader": "^2.1.2",
+    "ts-loader": "^5.3.3",
     "ts-node": "^8.0.2"
   }
 }
